--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 crossterm = "0.29.0"
+signal-hook = "0.3"
 russh = { version = "0.54.6", default-features = false, features = ["aws-lc-rs", "rsa", "dsa", "des", "flate2"] }
 clap = { version = "4.5", features = ["derive"] }
 rpassword = "7"
