--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 crossterm = "0.29.0"
 signal-hook = "0.3"
-rustix = { version = "0.38", default-features = false, features = ["termios"] }
+rustix = { version = "1.1.2", default-features = false, features = ["termios"] }
 russh = { version = "0.54.6", default-features = false, features = ["aws-lc-rs", "rsa", "dsa", "des", "flate2"] }
 clap = { version = "4.5", features = ["derive"] }
 rpassword = "7"
@@ -20,3 +20,6 @@ whoami = "1"
 rand_core = "0.9.3"
 ratatui = "0.29.0"
 sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }
+
+[profile.dev.package.sqlx-macros]
+opt-level = 3
