feat(cli): add support for managing relay hosts via CLI
- Add new CLI options `--add-host` and `--hostname` for server mode
- Create database migration for relay_hosts and relay_host_options tables
- Implement `add_relay_host` function to store relay host entries
- Update environment variables from LSSH to RB prefixes
- Change default database file extension from .sqlite to .db
- Enable SQLx offline mode in Cargo.toml for build optimization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,10 @@ sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sq
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
+
+[package.metadata.sqlx]
+offline = true
+
+[[bin]]
+name = "rb"
+path = "src/main.rs"
