--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,13 @@ ratatui = "0.29.0"
 sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }
 dirs = "6.0.0"
 url = "2.5"
+ssh-key = "0.6"
+rsa = { version = "0.9.9", default-features = false }
+des = "0.8"
+cbc = "0.1"
+md5 = "0.8.0"
+hex = "0.4"
+base64 = "0.22"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
