--- a/crates/client-core/Cargo.toml
+++ b/crates/client-core/Cargo.toml
@@ -11,3 +11,11 @@ ssh-core = { path = "../ssh-core" }
 state-store = { path = "../state-store" }
 tokio.workspace = true
 tracing.workspace = true
+ssh-key.workspace = true
+rpassword.workspace = true
+rsa.workspace = true
+des.workspace = true
+cbc.workspace = true
+md5.workspace = true
+hex.workspace = true
+base64.workspace = true
