feat(forwarding): add SSH port forwarding support
Add support for local and remote TCP port forwarding, dynamic SOCKS proxy,
and Unix socket forwarding. Includes CLI options for -L, -R, -D, and Unix
forwarding flags. Implements ForwardingManager to handle channel setup and
lifecycle management for forwarded connections. Updates session handling to
prepare channels with forwarding configurations. Adds async-trait dependency
for trait implementations. Includes new test directories for integration tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ crossterm = "0.29.0"
 signal-hook = "0.3"
 rustix = { version = "1.1.2", default-features = false, features = ["termios"] }
 russh = { version = "0.54.6", default-features = false, features = ["aws-lc-rs", "rsa", "dsa", "des", "flate2"] }
+async-trait = "0.1"
 clap = { version = "4.5.52", features = ["derive"] }
 rpassword = "7"
 whoami = "1"
