--- a/crates/rb-cli/Cargo.toml
+++ b/crates/rb-cli/Cargo.toml
@@ -14,3 +14,6 @@ tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 whoami.workspace = true
+
+[dev-dependencies]
+serial_test = "3"
