--- a/crates/ssh-core/Cargo.toml
+++ b/crates/ssh-core/Cargo.toml
@@ -3,6 +3,9 @@ name = "ssh-core"
 version.workspace = true
 edition.workspace = true
 
+[features]
+forwarding-tests = []
+
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
@@ -12,3 +15,4 @@ rustix.workspace = true
 signal-hook.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+async-trait.workspace = true
