feat(shell): add interactive escape sequences
Add support for OpenSSH-style escape sequences in the interactive shell, allowing users to perform local control actions during sessions. Users can press Enter then `~` to open a colored menu with options including disconnect (`~.`), rekey (`~R`), verbosity adjustment (`~V`/`~v`), list forwards (`~#`), suspend (`~^Z` on Unix), detach stdin (`~&`), and send literal tilde (`~~`).

This includes a new escape parser in the shell module, signal handling for reattachment (SIGUSR1), and integration with a reloadable logging system for live verbosity changes. Documentation and READMEs have been updated to reflect the new capabilities and usage examples.

--- a/crates/ssh-core/Cargo.toml
+++ b/crates/ssh-core/Cargo.toml
@@ -16,3 +16,6 @@ signal-hook.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 async-trait.workspace = true
+tracing-subscriber.workspace = true
+once_cell.workspace = true
+libc.workspace = true
