--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ cbc = "0.1"
 md5 = "0.8.0"
 hex = "0.4"
 base64 = "0.22"
+once_cell = "1"
+libc = "0.2"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
