--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ async-trait = "0.1"
 clap = { version = "4.5.52", features = ["derive"] }
 rpassword = "7"
 whoami = "1"
-rand_core = "0.9.3"
+rand_core = { version = "0.9.3", features = ["os_rng"] }
 ratatui = "0.29.0"
 sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }
 dirs = "6.0.0"
@@ -39,10 +39,10 @@ md5 = "0.8.0"
 hex = "0.4"
 base64 = "0.22"
 once_cell = "1"
-libc = "0.2"
+libc = "0.2" # we can remove this if we get to clean up our get-pid code
+argon2 = "0.5"
+password-hash = { version = "0.5", features = ["std"] }
+rand = "0.8"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
-
-[workspace.metadata.sqlx]
-offline = true
