--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -12,3 +12,7 @@ ssh-core = { path = "../ssh-core" }
 state-store = { path = "../state-store" }
 tokio.workspace = true
 tracing.workspace = true
+argon2.workspace = true
+password-hash.workspace = true
+rand_core.workspace = true
+rand.workspace = true
