--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,9 @@ libc = "0.2" # we can remove this if we get to clean up our get-pid code
 argon2 = "0.5"
 password-hash = { version = "0.5", features = ["std"] }
 rand = "0.8"
+chacha20poly1305 = { version = "0.10", features = ["std"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
