--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -16,3 +16,13 @@ argon2.workspace = true
 password-hash.workspace = true
 rand_core.workspace = true
 rand.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+chacha20poly1305.workspace = true
+base64.workspace = true
+futures = "0.3"
+
+[dev-dependencies]
+serial_test = "3"
+sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }
+state-store = { path = "../state-store" }
