refactor(error): replace anyhow with thiserror for structured error handling
Introduce custom error types (ClientError, ServerError, SshCoreError, DbError)
across client-core, server-core, ssh-core, and state-store crates to provide
more specific and structured error handling. This improves error traceability
and debugging by replacing generic anyhow errors with typed variants.
Updated all affected functions to return the new result types and map errors
appropriately, while maintaining backward compatibility for public APIs.

--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -4,12 +4,12 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-anyhow.workspace = true
 ratatui.workspace = true
 russh.workspace = true
 sqlx.workspace = true
 ssh-core = { path = "../ssh-core" }
 state-store = { path = "../state-store" }
+thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 argon2.workspace = true
@@ -23,6 +23,7 @@ base64.workspace = true
 futures = "0.3"
 
 [dev-dependencies]
+anyhow.workspace = true
 serial_test = "3"
 sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio", "sqlite"] }
 state-store = { path = "../state-store" }
