--- a/crates/ssh-core/Cargo.toml
+++ b/crates/ssh-core/Cargo.toml
@@ -7,12 +7,12 @@ edition.workspace = true
 forwarding-tests = []
 
 [dependencies]
-anyhow.workspace = true
 clap.workspace = true
 crossterm.workspace = true
 russh.workspace = true
 rustix.workspace = true
 signal-hook.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 async-trait.workspace = true
