--- a/crates/state-store/Cargo.toml
+++ b/crates/state-store/Cargo.toml
@@ -4,8 +4,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-anyhow.workspace = true
 dirs.workspace = true
 sqlx.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
