refactor: secure sensitive data with secrecy crate
- Replace plain strings and byte vectors with SecretString and SecretVec for passwords, secrets, and encrypted data
- Update function signatures and usages to handle secret types, exposing only when necessary
- Add secrecy dependency to client-core, rb-cli, and server-core crates

BREAKING CHANGE: ClientConfig::password and AuthPreferences::password now use SecretString instead of String, requiring .expose_secret() for access. Encryption functions now return SecretVec<u8> instead of Vec<u8>.

--- a/crates/rb-cli/Cargo.toml
+++ b/crates/rb-cli/Cargo.toml
@@ -14,6 +14,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 whoami.workspace = true
 server-core = { path = "../server-core" }
+secrecy.workspace = true
 
 [dev-dependencies]
 serial_test = "3"
