--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ rand = "0.8"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+secrecy = { version = "0.10", features = ["serde"] }
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
