--- a/crates/client-core/Cargo.toml
+++ b/crates/client-core/Cargo.toml
@@ -22,6 +22,7 @@ cbc.workspace = true
 md5.workspace = true
 hex.workspace = true
 base64.workspace = true
+secrecy.workspace = true
 
 [dev-dependencies]
 async-trait.workspace = true
