--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -20,6 +20,7 @@ serde.workspace = true
 serde_json.workspace = true
 chacha20poly1305.workspace = true
 base64.workspace = true
+secrecy.workspace = true
 futures = "0.3"
 
 [dev-dependencies]
