--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/server-core",
     "crates/ssh-core",
     "crates/state-store",
+    "crates/tui-core",
 ]
 resolver = "2"
 
@@ -48,6 +49,7 @@ chacha20poly1305 = { version = "0.10", features = ["std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 secrecy = { version = "0.10", features = ["serde"] }
+tui-core = { path = "crates/tui-core" }
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
