--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -21,6 +21,7 @@ serde_json.workspace = true
 chacha20poly1305.workspace = true
 base64.workspace = true
 secrecy.workspace = true
+tui-core.workspace = true
 futures = "0.3"
 
 [dev-dependencies]
