feat(tui): implement app switching and add relay selector and management apps
Refactor TUI components to support dynamic app switching between RelaySelector and Management apps. Extract echo app functionality into utils, update TuiApp trait to use AppAction enum for better control flow, and add local TUI launch capability via CLI subcommands.

BREAKING CHANGE: TuiApp trait methods now return AppAction enum instead of bool, and render method signature includes uptime parameter. Update implementations accordingly.

--- a/crates/rb-cli/Cargo.toml
+++ b/crates/rb-cli/Cargo.toml
@@ -15,6 +15,9 @@ tracing-subscriber.workspace = true
 whoami.workspace = true
 server-core = { path = "../server-core" }
 secrecy.workspace = true
+tui-core.workspace = true
+ratatui.workspace = true
+crossterm.workspace = true
 
 [dev-dependencies]
 serial_test = "3"
