feat: enable database-backed relay & cred mgmt
- Replace hardcoded relay data with dynamic loading from database
- Add encryption for sensitive data like host keys and credentials
- Implement local relay connection from CLI with proper authentication
- Refactor key loading to support legacy PEM formats in shared module
- Update TUI apps to use real relay data with access control filtering
- Enhance server startup to require master secret for encryption

BREAKING CHANGE: Server now requires RB_SERVER_SECRETS_KEY or RB_SERVER_SECRETS_PASSPHRASE environment variable for secure operation. Unencrypted stored keys will be automatically upgraded to encrypted on first run.

--- a/crates/rb-cli/Cargo.toml
+++ b/crates/rb-cli/Cargo.toml
@@ -18,6 +18,7 @@ secrecy.workspace = true
 tui-core.workspace = true
 ratatui.workspace = true
 crossterm.workspace = true
+state-store = { path = "../state-store" }
 
 [dev-dependencies]
 serial_test = "3"
