--- a/crates/tui-core/Cargo.toml
+++ b/crates/tui-core/Cargo.toml
@@ -9,6 +9,8 @@ tokio.workspace = true
 tracing.workspace = true
 thiserror.workspace = true
 crossterm = "0.29.0"
+async-trait.workspace = true
+anyhow.workspace = true
 
 [dev-dependencies]
 anyhow.workspace = true
