feat(tui): add hostkey management to management app
Add support for fetching, reviewing, and storing host keys for relay hosts in the TUI management interface. Includes background fetching with configurable timeout, status messages, and user confirmation for key changes. Refactored action handling to support asynchronous operations and improved status feedback.

--- a/crates/tui-core/Cargo.toml
+++ b/crates/tui-core/Cargo.toml
@@ -11,6 +11,7 @@ thiserror.workspace = true
 crossterm = "0.29.0"
 async-trait.workspace = true
 anyhow.workspace = true
+unicode-width.workspace = true
 
 [dev-dependencies]
 anyhow.workspace = true
