--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ signal-hook = "0.3"
 rustix = { version = "1.1.2", default-features = false, features = ["termios"] }
 russh = { version = "0.54.6", default-features = false, features = ["aws-lc-rs", "rsa", "dsa", "des", "flate2"] }
 async-trait = "0.1"
-clap = { version = "4.5.52", features = ["derive"] }
+clap = { version = "4.5.53", features = ["derive"] }
 rpassword = "7"
 whoami = "1"
 rand_core = { version = "0.9.3", features = ["os_rng"] }
@@ -44,12 +44,13 @@ once_cell = "1"
 libc = "0.2" # we can remove this if we get to clean up our get-pid code
 argon2 = "0.5"
 password-hash = { version = "0.5", features = ["std"] }
-rand = "0.8"
+rand = "0.8.0"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 secrecy = { version = "0.10", features = ["serde"] }
 tui-core = { path = "crates/tui-core" }
+unicode-width = "0.1"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
