--- a/crates/rb-cli/Cargo.toml
+++ b/crates/rb-cli/Cargo.toml
@@ -18,6 +18,7 @@ secrecy.workspace = true
 tui-core.workspace = true
 ratatui.workspace = true
 crossterm.workspace = true
+rb-types = { path = "../rb-types" }
 state-store = { path = "../state-store" }
 rb-web = { path = "../rb-web", features = ["server"] }
 
