--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -21,6 +21,12 @@ server = [
     "secrecy",
     "russh",
     "futures",
+    "axum_session",
+    "axum_session_auth",
+    "axum_session_sqlx",
+    "sqlx",
+    "async-trait",
+    "rb-types/sqlx",
 ]
 
 [dependencies]
@@ -43,7 +49,13 @@ web-sys = { version = "0.3", optional = true, features = [
 ] }
 state-store = { path = "../state-store", optional = true }
 server-core = { path = "../server-core", optional = true }
+rb-types = { path = "../rb-types" }
 secrecy = { workspace = true, optional = true }
 russh = { workspace = true, optional = true }
 gloo-timers = { version = "0.3", features = ["futures"] }
 futures = { version = "0.3", optional = true }
+axum_session = { version = "0.17", optional = true }
+axum_session_auth = { version = "0.17", optional = true }
+axum_session_sqlx = { version = "0.6", optional = true, features = ["sqlite"] }
+sqlx = { workspace = true, features = ["sqlite"], optional = true }
+async-trait = { workspace = true, optional = true }
