--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,8 @@ chacha20poly1305 = { version = "0.10", features = ["std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 secrecy = { version = "0.10", features = ["serde"] }
+hkdf = "0.12"
+sha2 = "0.10"
 tui-core = { path = "crates/tui-core" }
 dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
 axum = { version = "0.8.7", features = ["macros", "json", "ws"] }
