--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -22,6 +22,9 @@ serde_json.workspace = true
 chacha20poly1305.workspace = true
 base64.workspace = true
 secrecy.workspace = true
+once_cell.workspace = true
+hkdf.workspace = true
+sha2.workspace = true
 tui-core.workspace = true
 futures = "0.3"
 anyhow.workspace = true
