perf(db): optimize database connection initialization with OnceCell
Use tokio::sync::OnceCell to ensure client and server database pools are
initialized only once, preventing redundant connection setups and improving
performance on repeated access. Added "sync" feature to tokio dependency.

--- a/crates/state-store/Cargo.toml
+++ b/crates/state-store/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 
 [dependencies]
 sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros"] }
-tokio = { workspace = true, features = ["fs"] }
+tokio = { workspace = true, features = ["fs", "sync"] }
 tracing = { workspace = true }
 url = { workspace = true }
 dirs = { workspace = true }
