refactor(db): inject database pool via axum extensions
Remove repeated calls to state_store::server_db().await in web API handlers
and instead inject the SqlitePool via axum::Extension for better performance
and cleaner dependency management. Add feature flags to state-store crate
to enable conditional compilation of client and server database functions.

--- a/crates/rb-cli/Cargo.toml
+++ b/crates/rb-cli/Cargo.toml
@@ -19,7 +19,7 @@ tui-core.workspace = true
 ratatui.workspace = true
 crossterm.workspace = true
 rb-types = { path = "../rb-types" }
-state-store = { path = "../state-store" }
+state-store = { path = "../state-store", features = ["client", "server"] }
 rb-web = { path = "../rb-web", features = ["server"] }
 
 [dev-dependencies]
