--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -47,7 +47,9 @@ web-sys = { version = "0.3", optional = true, features = [
     "Element",
     "HtmlElement",
 ] }
-state-store = { path = "../state-store", optional = true }
+state-store = { path = "../state-store", optional = true, features = [
+    "server",
+] }
 server-core = { path = "../server-core", optional = true }
 rb-types = { path = "../rb-types" }
 secrecy = { workspace = true, optional = true }
