refactor(types): reorganize shared types into rb-types crate
Centralize type definitions previously scattered across multiple crates
into the rb-types crate to eliminate duplication and improve maintainability.
This includes moving auth, client, config, credentials, relay, ssh, state,
users, and access-related types into dedicated modules within rb-types,
with corresponding updates to imports and feature flags across the codebase.

--- a/crates/client-core/Cargo.toml
+++ b/crates/client-core/Cargo.toml
@@ -11,6 +11,7 @@ russh.workspace = true
 sqlx.workspace = true
 ssh-core = { path = "../ssh-core" }
 state-store = { path = "../state-store" }
+rb-types = { path = "../rb-types", features = ["secrecy", "clap"] }
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
