--- a/crates/rb-types/Cargo.toml
+++ b/crates/rb-types/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 [features]
 sqlx = ["dep:sqlx"]
+secrecy = ["dep:secrecy"]
+clap = ["dep:clap"]
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
 sqlx = { workspace = true, default-features = false, features = [
     "macros",
 ], optional = true }
+secrecy = { workspace = true, optional = true }
+clap = { workspace = true, optional = true }
