feat(web): add SSH public key management with Profile page and API endpoints
- Add new Profile page (/profile) with SSH key management UI including add/delete/key validation
- Implement SSH key CRUD API endpoints (get_my_ssh_keys, add_my_ssh_key, delete_my_ssh_key)
- Add SshKey struct to rb-types for SSH key data modeling
- Update Access page to display SSH key counts per user
- Enhance Table component with configurable styling and header widths
- Add Profile link to avatar dropdown for easy access
- Integrate OIDC link/unlink functionality in Profile page with confirmation modals
- Update OIDC status to include subject field for better identity tracking
- Add js-sys dependency for web-specific date formatting in SSH key display

This implements end-to-end SSH public key authentication support in the web UI, allowing users to manage their SSH keys through a self-service interface while providing administrators visibility into user key usage.

--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -66,3 +66,4 @@ async-trait = { workspace = true, optional = true }
 openidconnect = { workspace = true, optional = true }
 url = { workspace = true, optional = true }
 urlencoding = "2.1.3"
+js-sys = "0.3.82"
