--- a/crates/tui-core/Cargo.toml
+++ b/crates/tui-core/Cargo.toml
@@ -12,6 +12,7 @@ crossterm = "0.29.0"
 async-trait.workspace = true
 anyhow.workspace = true
 unicode-width.workspace = true
+rb-types = { path = "../rb-types" }
 
 [dev-dependencies]
 anyhow.workspace = true
