--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -69,3 +69,4 @@ urlencoding = "2.1.3"
 js-sys = "0.3.82"
 chrono = { version = "0.4.42", features = ["serde"] }
 uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
+gloo-events = "0.2.0"
