--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -32,6 +32,8 @@ openidconnect = { workspace = true, features = ["reqwest"] }
 ssh-key.workspace = true
 ssh-encoding = "0.2"
 reqwest.workspace = true
+chrono = { version = "0.4.42", features = ["serde"] }
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
 
 [dev-dependencies]
 anyhow.workspace = true
