feat(session): implement real-time multi-session SSH terminal management with WebSocket collaboration
- Add real-time session event broadcasting via WebSocket for session lifecycle management
- Implement multi-viewer session awareness with active connection and viewer tracking
- Create session events WebSocket API for presence updates and session synchronization
- Add persistent session storage with localStorage integration and auto-restore on page load
- Enhance session UI with viewer count indicators, warning banners, and close confirmation dialogs
- Refactor session management provider with WebSocket integration for real-time updates
- Add server-side session registry enhancements with web connection tracking and event broadcasting
- Implement minimize state synchronization between client and server for session windows

BREAKING CHANGE: Renamed ssh_websocket module to ws with new API structure
BREAKING CHANGE: Session management now requires WebSocket connection for real-time synchronization

--- a/crates/rb-types/Cargo.toml
+++ b/crates/rb-types/Cargo.toml
@@ -19,3 +19,4 @@ secrecy = { workspace = true, optional = true }
 clap = { workspace = true, optional = true }
 openidconnect = { workspace = true, optional = true }
 ssh-key = { workspace = true, optional = true }
+chrono = { workspace = true, features = ["serde"] }
