--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
 unicode-width = "0.1"
 reqwest = { version = "0.12", features = ["json"] }
 openidconnect = { version = "3", features = ["reqwest"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
