feat(session): implement comprehensive session administration and monitoring features
Add complete session management system with admin panel and user-facing session controls:

**Admin Features:**
- View all active sessions across users with real-time updates
- Session categories: SSH Relay, SSH TUI, and Web sessions
- Session metadata: user, relay, connection counts, duration, IP, state
- Force-close any user's sessions with server:edit claim
- Live activity tracking with 30s idle detection

**User Features:**
- Personal session dashboard in profile page
- View own active sessions (web, SSH, relays)
- Close own sessions remotely
- Session origin tracking (Web vs SSH login)

**Backend Enhancements:**
- SessionRegistry with atomic ID generation and cleanup tasks
- WebSocket event broadcasting for real-time updates
- Session metadata: IP addresses, user agents, creation/activity timestamps
- Idle detection and detached session timeout handling
- Background cleanup for stale/detached sessions

**API & Authorization:**
- `server:view` and `server:edit` claims for admin functions
- Endpoints: list_all_sessions, list_my_sessions, close_session
- Proper RBAC enforcement for session management

**Data Model:**
- Enhanced SessionState, UserSessionSummary, AdminSessionSummary
- SessionKind enum for Relay/TUI/Web classification
- TUIApplication tracking for Management/Relay Selector apps

This completes the planned Phase 3 session administration features with comprehensive monitoring, real-time updates, and both admin and user-facing session management capabilities.

--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 
 [features]
 default = ["server"]
-web = ["dioxus/web", "web-sys"]
+web = ["dioxus/web", "web-sys", "futures"]
 server = [
     "anyhow",
     "tracing",
