build(db): introduce dedicated audit storage with encrypted session archives
Establishes a separate SQLite database for compliance-ready audit trails, featuring end-to-end encryption, compression, and searchable session metadata with timeline visualization.

Database Architecture:
- Independent audit.db with restricted 0600 permissions
- UUIDv7 identifiers for chronological ordering
- Normalized schema for sessions, chunks, and system events
- Cross-database relationship handling without FK constraints

Security Implementation:
- XChaCha20Poly1305 encryption using per-chunk salt/nonce
- zstd compression achieving ~70% storage reduction
- Atomic size tracking across original/compressed/encrypted states
- Connection attribution with IP/user-agent/ssh-client metadata

Operational Features:
- Background session recording with smart buffering
- Automatic connection lifecycle tracking (SSH/Web)
- Timing marker preservation for precise replay accuracy
- Non-blocking writes with transaction safety

API & Visualization:
- REST endpoints for session metadata and events
- WebSocket streaming for efficient replay data delivery
- Timeline-based navigation with event markers
- Export pipeline supporting multiple formats (cast/txt)

Migration Framework:
- Versioned schema updates (20251203 series)
- Connection metadata enrichment migration
- Timing accuracy enhancement layer

Introduces foundational audit capabilities while maintaining zero impact on primary session performance through async processing and intelligent buffering strategies.

--- a/crates/server-core/Cargo.toml
+++ b/crates/server-core/Cargo.toml
@@ -33,7 +33,8 @@ ssh-key.workspace = true
 ssh-encoding = "0.2"
 reqwest.workspace = true
 chrono = { version = "0.4.42", features = ["serde"] }
-uuid = { version = "1.18.1", features = ["v4", "serde"] }
+uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
+zstd = "0.13"
 
 [dev-dependencies]
 anyhow.workspace = true
