--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -57,6 +57,7 @@ rb-types = { path = "../rb-types" }
 secrecy = { workspace = true, optional = true }
 russh = { workspace = true, optional = true }
 gloo-timers = { version = "0.3", features = ["futures"] }
+wasm-bindgen = "0.2"
 futures = { version = "0.3", optional = true }
 axum_session = { version = "0.17", optional = true }
 axum_session_auth = { version = "0.17", optional = true }
@@ -68,5 +69,8 @@ url = { workspace = true, optional = true }
 urlencoding = "2.1.3"
 js-sys = "0.3.82"
 chrono = { version = "0.4.42", features = ["serde"] }
-uuid = { version = "1.18.1", features = ["v4", "serde", "js"] }
+uuid = { version = "1.18.1", features = ["v4", "v7", "serde", "js"] }
 gloo-events = "0.2.0"
+base64 = { workspace = true }
+zstd = "0.13"
+vt100 = "0.15"
