--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -6,10 +6,16 @@ publish = false
 
 [features]
 default = ["server"]
-web = ["dioxus/web", "web-sys", "futures"]
+web = [
+    "dioxus/web",
+    "web-sys",
+    "futures",
+    "tracing-web",
+    "tracing-subscriber",
+    "console_error_panic_hook",
+]
 server = [
     "anyhow",
-    "tracing",
     "tokio",
     "axum",
     "tower",
@@ -30,8 +36,10 @@ server = [
 serde = { workspace = true }
 serde_json = { workspace = true }
 dioxus = { workspace = true, features = ["fullstack"] }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, optional = true }
+tracing-web = { version = "0.1", optional = true }
 anyhow = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
 axum = { workspace = true, optional = true }
 tower = { workspace = true, optional = true }
@@ -63,3 +71,4 @@ uuid = { version = "1.18.1", features = ["v4", "v7", "serde", "js"] }
 gloo-events = "0.2.0"
 base64 = { workspace = true }
 vt100 = "0.15"
+console_error_panic_hook = { version = "0.1", optional = true }
