--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ unicode-width = "0.1"
 reqwest = { version = "0.12", features = ["json"] }
 openidconnect = { version = "3", features = ["reqwest"] }
 chrono = { version = "0.4", features = ["serde"] }
+tracing-panic = "0.1"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
