--- a/crates/rb-cli/Cargo.toml
+++ b/crates/rb-cli/Cargo.toml
@@ -20,6 +20,7 @@ ratatui.workspace = true
 crossterm.workspace = true
 rb-types = { path = "../rb-types" }
 rb-web = { path = "../rb-web", features = ["server"] }
+tracing-panic.workspace = true
 
 [dev-dependencies]
 serial_test = "3"
