--- a/crates/rb-web/Cargo.toml
+++ b/crates/rb-web/Cargo.toml
@@ -72,3 +72,4 @@ gloo-events = "0.2.0"
 base64 = { workspace = true }
 vt100 = "0.15"
 console_error_panic_hook = { version = "0.1", optional = true }
+thiserror = { workspace = true }
