feat(server): introduce ServerContext for explicit dependency management
This commit introduces a new ServerContext type that encapsulates runtime
dependencies (database handles and master key) for server-core operations.
The context is passed explicitly throughout the codebase, replacing
environment-based lookups and enabling parallel test execution.

Key changes:
- Added ServerContext type with server_db, audit_db, and master_key
- Refactored credential, user, relay host, and TUI operations to accept ServerContext
- Updated API handlers and CLI commands to use the new context
- Added test_support module for isolated SQLite test databases
- Removed serial_test dependency and global environment variable usage
- Improved secrets handling with explicit master key management

The changes maintain backward compatibility while enabling better test
isolation and future refactoring opportunities.

BREAKING CHANGE: Internal API signatures have changed to require ServerContext
parameter. External callers using the public API should update to pass the
context explicitly.

--- a/crates/client-core/Cargo.toml
+++ b/crates/client-core/Cargo.toml
@@ -3,6 +3,9 @@ name = "client-core"
 version.workspace = true
 edition.workspace = true
 
+[lib]
+doctest = false
+
 [features]
 forwarding-tests = []
 
