--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,3 +89,25 @@ opt-level = 3
 opt-level = 3
 debug = false
 codegen-units = 1
+
+[profile.dev.package."*"]
+opt-level = 3
+debug = false
+debug-assertions = false
+overflow-checks = false
+incremental = false
+codegen-units = 16
+
+# We can optimize this when we get closer to production, for now lets just match to reduce rebuilds.
+[profile.release.package."*"]
+opt-level = 3
+debug = false
+debug-assertions = false
+overflow-checks = false
+incremental = false
+codegen-units = 16
+
+[profile.dev]
+opt-level = 0
+debug = 1
+incremental = true
