--- a/crates/client-core/Cargo.toml
+++ b/crates/client-core/Cargo.toml
@@ -24,3 +24,5 @@ secrecy.workspace = true
 
 [dev-dependencies]
 async-trait.workspace = true
+anyhow.workspace = true
+tokio = { workspace = true, features = ["test-util"] }
